<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_title_bg"
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:contentDescription="@string/txt_image"
            android:scaleType="centerCrop"
            android:src="@drawable/discover_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/txt_game_app" />

        <TextView
            android:id="@+id/tv_title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawablePadding="8dp"
            android:text="@string/txt_game_app"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_videogame_asset_36"
            app:layout_constraintEnd_toEndOf="@id/iv_title_bg"
            app:layout_constraintStart_toStartOf="@id/iv_title_bg"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <View
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="#7F000000"
            app:layout_constraintBottom_toBottomOf="@id/iv_title_bg"
            app:layout_constraintEnd_toEndOf="@id/iv_title_bg"
            app:layout_constraintStart_toStartOf="@id/iv_title_bg" />

        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:text="@string/txt_app_tagline"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/view_background"
            app:layout_constraintEnd_toEndOf="@id/view_background"
            app:layout_constraintStart_toStartOf="@id/view_background"
            app:layout_constraintTop_toTopOf="@id/view_background" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_title_bg">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_home_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/txt_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/home_card_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_home"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="#7F000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/txt_explore_games"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/baseline_double_arrow_24"
                    app:layout_constraintBottom_toBottomOf="@id/view_home"
                    app:layout_constraintEnd_toEndOf="@id/view_home"
                    app:layout_constraintStart_toStartOf="@id/view_home"
                    app:layout_constraintTop_toTopOf="@id/view_home" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_home">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_favorite_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/txt_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/favorite_card_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view_favorite"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:background="#7F000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/txt_check_whistlist"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/baseline_double_arrow_24"
                    app:layout_constraintBottom_toBottomOf="@id/view_favorite"
                    app:layout_constraintEnd_toEndOf="@id/view_favorite"
                    app:layout_constraintStart_toStartOf="@id/view_favorite"
                    app:layout_constraintTop_toTopOf="@id/view_favorite" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>